Refactor ConfigServerRestExecutorImpl